# simplicity-editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  all-repos.sh
assets/css/: ui.css
assets/html/: ui.html
assets/js/: ui.js
src/main/c++/simplicity/editor/: API.h  Container.cpp  Container.h  Context.h  Directories.cpp  Directories.h  EditContext.cpp  EditContext.h  Editor.cpp  Editor.h  GlobalContext.cpp  GlobalContext.h  GodCameraController.cpp  GodCameraController.h  PlayContext.cpp  PlayContext.h
src/main/c++/simplicity/editor/common/: ConfigCompiler.cpp  ConfigCompiler.h  DataStores.cpp  DataStores.h  DynamicLibrary.cpp  DynamicLibrary.h  JSONInputStream.cpp  JSONInputStream.h
src/main/c++/simplicity/editor/engine/: EngineConfig.cpp  EngineConfig.h  EngineConfigCompiler.cpp  EngineConfigCompiler.h  TimedSerialCompositeEngine.cpp  TimedSerialCompositeEngine.h
src/main/c++/simplicity/editor/entity/: EntityConfig.cpp  EntityConfig.h  EntityConfigCompiler.cpp  EntityConfigCompiler.h
src/main/c++/simplicity/editor/scripting/: CameraController.cpp  CameraController.h  UIController.cpp  UIController.h
src/main/c++/simplicity/editor/ui/: HeaderController.cpp  HeaderController.h
src/main/css/: ui.css
src/main/html/: ui.html
src/main/js/: ui.js
